tests/fixtures/invalid/pow_bytes_list_int.py
# Cannot call pow() with Bytes, List[int], Int
x = pow(b"hello", [1, 2, 3], 1)
